--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#"><i class="fas fa-headset"></i> Hotline <strong>1234.5678</strong></a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> Showroom</a></li>
                     <li><a href="#"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
-                    <li><a href="#"><i class="fas fa-shopping-cart"></i> Giỏ hàng</a></li>
+                    <li><a href="GioHang.html"><i class="fas fa-shopping-cart cart"></i> Giỏ hàng</a></li>
                     <li><a href="login.html" class="login-btn"><i class="fas fa-user"></i> Đăng nhập</a></li>
                 </ul>
         </header>
@@ -383,12 +383,12 @@
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
                     <a href="#"><i class="fab fa-tiktok"></i></a>
-                    <a href="#"><i class="fab fa-zalo"></i></a>
                 </div>
             </div>
         </div>
     </footer>
 
+    <script src="../Tech-Zone/SanPham.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../Tech-Zone/main.js"></script>
     <script src="../Tech-Zone/bootstrap.bundle.js"></script>
