--- a/pc.html
+++ b/pc.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="../Tech-Zone/style_SanPham.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script src="../Tech-Zone/main.js"></script>
-    <script src="../Tech-Zone/bootstrap.bundle.js"></script>
     <link rel="icon" href="IMG/Main/Logo.png" type="image/x-icon">
 </head>
 <body>
@@ -27,7 +25,7 @@
                     <li><a href="#"><i class="fas fa-headset"></i> Hotline <strong>1234.5678</strong></a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> Showroom</a></li>
                     <li><a href="#"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
-                    <li><a href="#"><i class="fas fa-shopping-cart"></i> Giỏ hàng</a></li>
+                    <li><a href="GioHang.html"><i class="fas fa-shopping-cart cart"></i> Giỏ hàng</a></li>
                     <li><a href="login.html" class="login-btn"><i class="fas fa-user"></i> Đăng nhập</a></li>
                 </ul>
         </header>
@@ -242,11 +240,6 @@
                             <span id="modalOriginalPrice" class="price-original"></span>
                             <span id="modalDiscount" class="discount-tag"></span>
                         </p>
-                        <div class="modal-promo">
-                            <p>Quà tặng khuyến mãi</p>
-                            <ul id="modalPromo">
-                            </ul>
-                        </div>
                         <div class="modal-policies">
                             <p>Mua ngay</p>
                             <ul id="modalPolicies">
@@ -259,11 +252,6 @@
                         </div>
                         <div class="modal-support">
                             <p>Hỗ trợ trả góp MPOS (Thẻ tín dụng), HDSAISON</p>
-                        </div>
-                        <div class="modal-offers">
-                            <p>Khuyến mãi</p>
-                            <ul id="modalOffers">
-                            </ul>
                         </div>
                         <button class="add-to-cart-btn">Thêm Vào Giỏ Hàng</button>
                     </div>
@@ -320,6 +308,10 @@
             </div>
         </div>
     </footer>
+
+    <script src="../Tech-Zone/SanPham.js"></script>
+    <script src="../Tech-Zone/main.js"></script>
+    <script src="../Tech-Zone/bootstrap.bundle.js"></script>
 
 </body>
 
