--- a/GioHang.html
+++ b/GioHang.html
@@ -43,20 +43,22 @@
     </div>
 
     <!-- NỘI DUNG GIỎ HÀNG -->
-     <section>
-        <div class="text-center mt-3">
-            <a href="index.html" class="back-home-btn"> <i class="fas fa-home"></i>  Trang Chủ</a>
-        </div>
-        <div class="container cart-container">
-            <h2 class="text-center mb-4">🛒 Giỏ Hàng Của Bạn</h2>
-            <div id="cartItems"></div>
-        
-            <div class="text-end mt-4">
-                <div id="cartTotal" class="fs-4 fw-bold mb-3"></div>
-                <button id="checkoutBtn" class="btn btn-checkout">Thanh Toán Ngay</button>
+    <div class="content-wrapper">
+        <section>
+            <div class="text-center mt-3">
+                <a href="index.html" class="back-home-btn"> <i class="fas fa-home"></i> Trang Chủ</a>
             </div>
-        </div>
-     </section>
+            <div class="container cart-container">
+                <h2 class="text-center mb-4">🛒 Giỏ Hàng Của Bạn</h2>
+                <div id="cartItems"></div>
+
+                <div class="text-end mt-4">
+                    <div id="cartTotal" class="fs-4 fw-bold mb-3"></div>
+                    <button id="checkoutBtn" class="btn btn-checkout">Thanh Toán Ngay</button>
+                </div>
+            </div>
+        </section>
+    </div>
     
 
     <!-- FOOTER -->
