Tra Cuu Don Hang

--- a/GioHang.html
+++ b/GioHang.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giỏ Hàng - TechZone</title>
-    <link rel="stylesheet" href="../Tech-Zone/bootstrap.min.css">
-    <link rel="stylesheet" href="../Tech-Zone/style_index.css">
-    <link rel="stylesheet" href="../Tech-Zone/style_GioHang.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style_index.css">
+    <link rel="stylesheet" href="style_GioHang.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="IMG/Main/Logo.png" type="image/x-icon">
 </head>
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="#"><i class="fas fa-headset"></i> Hotline <strong>1234.5678</strong></a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> Showroom</a></li>
-                    <li><a href="#"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
+                    <li><a href="TraCuuDonHang.html"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
                     <li><a href="GioHang.html"><i class="fas fa-shopping-cart cart"></i> Giỏ hàng</a></li>
                     <li><a href="login.html" class="login-btn"><i class="fas fa-user"></i> Đăng nhập</a></li>
                 </ul>
