--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechZone</title>
-    <link rel="stylesheet" href="../Tech-Zone/bootstrap.min.css">
-    <link rel="stylesheet" href="../Tech-Zone/style_index.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style_index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="IMG/Main/Logo.png" type="image/x-icon">
@@ -27,7 +27,7 @@
                 <ul>
                     <li><a href="#"><i class="fas fa-headset"></i> Hotline <strong>1234.5678</strong></a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> Showroom</a></li>
-                    <li><a href="#"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
+                    <li><a href="TraCuuDonHang.html"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
                     <li><a href="GioHang.html"><i class="fas fa-shopping-cart cart"></i> Giỏ hàng</a></li>
                     <li><a href="login.html" class="login-btn"><i class="fas fa-user"></i> Đăng nhập</a></li>
                 </ul>
@@ -61,6 +61,9 @@
                 <div class="col-md-8">
                     <div class="swiper shadow-sm rounded overflow-hidden h-100">
                         <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="IMG/Banner/DemoBanner.png" alt="demo" class="img-fluid w-100">
+                            </div>
                             <div class="swiper-slide">
                                 <img src="IMG/Banner/demo3.png" alt="demo" class="img-fluid w-100">
                             </div>
@@ -97,7 +100,7 @@
             <div class="advertisement">
                 <h4>🔥 Flash Sale Khủng! Lap Sale Top🔥</h4>
             </div>
-            <a href="#">Xem Chi Tiết</a>
+            <a href="Laptop.html">Xem Chi Tiết</a>
         </div>
         <div class="product-container-sales">
             <div class="product-card" onclick="showModal('1')">
@@ -149,7 +152,7 @@
             <div class="advertisement">
                 <h4>🔥 Flash Sale Khủng! PC Giảm Sâu 🔥</h4>
             </div>
-            <a href="#">Xem Chi Tiết</a>
+            <a href="pc.html">Xem Chi Tiết</a>
         </div>
         <div class="product-container-sales">
              <div class="product-card" onclick="showModal('1')">
@@ -202,7 +205,7 @@
             <div class="advertisement">
                 <h4>🖥️ PC bán chạy 🔥 | Trả góp 0% </h4>
             </div>
-            <a href="#">Xem Chi Tiết</a>
+            <a href="pc.html">Xem Chi Tiết</a>
         </div>
         <div class="product-container-sales">
             <div class="product-card" onclick="showModal('1')">
@@ -254,7 +257,7 @@
             <div class="advertisement">
                 <h4>🖥️ LapTop Bán Chạy 🔥 | Trả góp 0% </h4>
             </div>
-            <a href="#">Xem Chi Tiết</a>
+            <a href="Laptop.html">Xem Chi Tiết</a>
         </div>
         <div class="product-container-sales">
             <div class="product-card" onclick="showModal('1')">
@@ -388,9 +391,9 @@
         </div>
     </footer>
 
-    <script src="../Tech-Zone/SanPham.js"></script>
+    <script src="SanPham.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="../Tech-Zone/main.js"></script>
-    <script src="../Tech-Zone/bootstrap.bundle.js"></script>
+    <script src="main.js"></script>
+    <script src="bootstrap.bundle.js"></script>
 </body>
 </html>
