--- a/Laptop.html
+++ b/Laptop.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LapTop - TechZone</title>
-    <link rel="stylesheet" href="../Tech-Zone/bootstrap.min.css">
-    <link rel="stylesheet" href="../Tech-Zone/style_index.css">
-    <link rel="stylesheet" href="../Tech-Zone/style_SanPham.css">
+    <link rel="stylesheet" href="/bootstrap.min.css">
+    <link rel="stylesheet" href="style_index.css">
+    <link rel="stylesheet" href="style_SanPham.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="IMG/Main/Logo.png" type="image/x-icon">
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="#"><i class="fas fa-headset"></i> Hotline <strong>1234.5678</strong></a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> Showroom</a></li>
-                    <li><a href="#"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
+                    <li><a href="TraCuuDonHang.html"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
                     <li><a href="GioHang.html"><i class="fas fa-shopping-cart cart"></i> Giỏ hàng</a></li>
                     <li><a href="login.html" class="login-btn"><i class="fas fa-user"></i> Đăng nhập</a></li>
                 </ul>
@@ -302,9 +302,9 @@
         </div>
     </footer>
 
-    <script src="../Tech-Zone/SanPham.js"></script>
-    <script src="../Tech-Zone/main.js"></script>
-    <script src="../Tech-Zone/bootstrap.bundle.js"></script>
+    <script src="SanPham.js"></script>
+    <script src="main.js"></script>
+    <script src="bootstrap.bundle.js"></script>
 
 </body>
 </html>
