--- a/TraCuuDonHang.html
+++ b/TraCuuDonHang.html
@@ -125,7 +125,7 @@
             if (maDon !== "") {
                 if (maDon === "12341234") {
                     ketQua.innerHTML = `
-                        <p><strong>Mã đơn hàng:</strong> 1234</p>
+                        <p><strong>Mã đơn hàng:</strong> 12341234</p>
                         <p><strong>Khách hàng:</strong> Nguyễn Văn A</p>
                         <p><strong>Ngày đặt hàng:</strong> 19/04/2025</p>
                         <p><strong>Trạng thái:</strong> <span style="color: green;">Đang giao</span></p>
