chỉnh lại phân vùng file

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In/Up Form</title>
-    <link rel="stylesheet" href="style_login.css">
+    <link rel="stylesheet" href="../CSS/style_login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <header class="top-header">
             <div class="left">
             <a href="index.html">
-                <img src="IMG/Main/Logo.png" alt="Logo_TechZone" class="logo">
+                <img src="../IMG/Main/Logo.png" alt="Logo_TechZone" class="logo">
             </a>
             <input type="text" placeholder="Bạn cần tìm gì?" class="search-box">
             </div>
