--- a/HTML/GioHang.html
+++ b/HTML/GioHang.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giỏ Hàng - TechZone</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="style_index.css">
-    <link rel="stylesheet" href="style_GioHang.css">
+    <link rel="stylesheet" href="../CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="../CSS/style_index.css">
+    <link rel="stylesheet" href="../CSS/style_GioHang.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="IMG/Main/Logo.png" type="image/x-icon">
+    <link rel="icon" href="../IMG/Main/Logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="header">
         <header class="top-header">
             <div class="left">
-                <a href="index.html">
-                    <img src="IMG/Main/Logo.png" alt="Logo_TechZone" class="logo">
+                <a href="../HTML/index.html">
+                    <img src="../IMG/Main/Logo.png" alt="Logo_TechZone" class="logo">
                 </a>
                 <input type="text" placeholder="Bạn cần tìm gì?" class="search-box">
             </div>
@@ -111,6 +111,6 @@
         </div>
     </footer>
 
-    <script src="giohang.js"></script>
+    <script src="../JS/giohang.js"></script>
 </body>
 </html>
