--- a/HTML/Laptop.html
+++ b/HTML/Laptop.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LapTop - TechZone</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="style_index.css">
-    <link rel="stylesheet" href="style_SanPham.css">
+    <link rel="stylesheet" href="../CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="../CSS/style_index.css">
+    <link rel="stylesheet" href="../CSS/style_SanPham.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="IMG/Main/Logo.png" type="image/x-icon">
@@ -42,177 +42,103 @@
         </nav>
     </div>
     <div class="img-left">
-        <img src="../Tech-Zone/IMG/Banner/demo7.png">
+        <img src="../IMG/Banner/demo7.png">
     </div>
 
     <div class="img-right">
-        <img src="../Tech-Zone/IMG/Banner/demo6.png">
+        <img src="../IMG/Banner/demo6.png">
     </div>
     <div class="container">
-        <img src="IMG/Banner/demo9.png" style="width: 100%;">
+        <img src="../IMG/Banner/demo9.png" style="width: 100%;">
         <div>
             <a href="index.html" class="back-home-btn"> <i class="fas fa-home"></i>  Trang Chủ</a>
         </div>
         <div class="grid_product">
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
+                <div class="price">50.990.000đ</div>
+            </div>
+            
+            <div class="product-card" onclick="showModal('1')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
+                <div class="price">50.990.000đ</div>
+            </div>
+            
+            <div class="product-card" onclick="showModal('1')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
-
-            <div class="product-card" onclick="showModal('1')">
-                <img src="IMG/items/zephyrus_g14.webp" alt="Laptop 1">
-                <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
-                <div class="price">50.990.000đ</div>
-            </div>
         </div>
     </div>
 
@@ -302,9 +228,9 @@
         </div>
     </footer>
 
-    <script src="SanPham.js"></script>
-    <script src="main.js"></script>
-    <script src="bootstrap.bundle.js"></script>
+    <script src="../JS/SanPham.js"></script>
+    <script src="../JS/main.js"></script>
+    <script src="../JS/bootstrap.bundle.js"></script>
 
 </body>
 </html>
