--- a/HTML/Laptop.html
+++ b/HTML/Laptop.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="../CSS/style_SanPham.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="IMG/Main/Logo.png" type="image/x-icon">
+    <link rel="icon" href="../IMG/Main/Logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="header">
         <header class="top-header">
             <div class="left">
             <a href="index.html">
-                <img src="IMG/Main/Logo.png" alt="Logo_TechZone" class="logo">
+                <img src="../IMG/Main/Logo.png" alt="Logo_TechZone" class="logo">
             </a>
             <input type="text" placeholder="Bạn cần tìm gì?" class="search-box">
             </div>
