--- a/HTML/login.html
+++ b/HTML/login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In/Up Form</title>
+    <title>Đăng Nhập - TechZone</title>
     <link rel="stylesheet" href="../CSS/style_login.css">
+    <link rel="icon" href="../IMG/Main/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
